syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


package coupon;

message Coupon {
    google.protobuf.UInt64Value id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue code =3;
    google.protobuf.StringValue description = 4;

    enum CouponType {
        UNDEFINED = 0;
        PERCENT = 1;
        FLAT = 2;
    }

    CouponType type = 5;
   
    google.protobuf.BoolValue status = 6;        
    TimeOfDay time_from = 7;
    TimeOfDay time_to = 8;
    Date date_from = 9; 
    Date date_to = 10;
    google.protobuf.FloatValue value = 11;
    google.protobuf.UInt64Value franchise_id = 12;
    
    enum DayOfWeek {
        DAY_OF_WEEK_UNSPECIFIED = 0;
        MONDAY = 1;
        TUESDAY = 2;
        WEDNESDAY = 3;
        THURSDAY = 4;
        FRIDAY = 5;
        SATURDAY = 6;
        SUNDAY = 7;
    }
    repeated DayOfWeek days = 13;
}

message Date {
    google.protobuf.UInt32Value year = 1;
    google.protobuf.UInt32Value month = 2;
    google.protobuf.UInt32Value day = 3;
}

message TimeOfDay {
    google.protobuf.UInt32Value hours = 1;
    google.protobuf.UInt32Value minutes = 2;
}

message CreateCouponRequest{
    Coupon coupon = 1;
}

message UpdateCouponRequest{
    Coupon coupon = 1;
}

message GetCouponRequest{
    google.protobuf.UInt64Value id = 1;
}

message DeleteCouponRequest{
    google.protobuf.UInt64Value id = 1;
}

message ListCouponsRequest{
    google.protobuf.StringValue filter = 1;
}

message ListCouponsResponse{
    repeated Coupon coupons = 1;
}

message ListCouponsByFranchiseRequest{
    google.protobuf.UInt64Value id = 1;
    google.protobuf.StringValue filter = 2;
}

service CouponService {
    rpc CreateCoupon(CreateCouponRequest) returns (Coupon){

    }
    rpc GetCoupon(GetCouponRequest) returns (Coupon){

    }
    rpc UpdateCoupon(UpdateCouponRequest) returns (Coupon){

    }
    rpc DeleteCoupon(DeleteCouponRequest) returns (google.protobuf.Empty){
    
    }
    rpc ListCoupons(ListCouponsRequest) returns (ListCouponsResponse){

    }
    rpc ListCouponsByFranchise(ListCouponsByFranchiseRequest)returns(ListCouponsResponse){

    }
}